one tyep of typescript server is over

--- a/myApp01/.gitignore
+++ b/myApp01/.gitignore
@@ -9,6 +9,8 @@
 # Node
 /node_modules
 /expressSever/node_modules
+/AtypeScriptServer/node_modules
+/Atypescriptserver2/node_modules
 npm-debug.log
 yarn-error.log
 
