--- a/myApp01/AtypeScriptServer/package.json
+++ b/myApp01/AtypeScriptServer/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "events": "^3.3.0",
     "express": "^4.19.2",
     "mssql": "^10.0.2",
