code that was used as base for all back end is complted

--- a/myApp01/.gitignore
+++ b/myApp01/.gitignore
@@ -11,6 +11,7 @@
 /expressSever/node_modules
 /AtypeScriptServer/node_modules
 /Atypescriptserver2/node_modules
+/AtypeScriptServer3/node_modules
 npm-debug.log
 yarn-error.log
 
