--- a/myApp01/AtypeScriptServer3/package.json
+++ b/myApp01/AtypeScriptServer3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescriptserver",
+  "name": "atypescriptserver3",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,11 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "events": "^3.3.0",
     "express": "^4.19.2",
-    "mssql": "^10.0.2",
-    "ts-node": "^10.9.2"
+    "mssql": "^10.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
