typescript server 4 created whcih is a copy of base folder typescript server 3

--- a/myApp01/.gitignore
+++ b/myApp01/.gitignore
@@ -12,6 +12,7 @@
 /AtypeScriptServer/node_modules
 /Atypescriptserver2/node_modules
 /AtypeScriptServer3/node_modules
+/AtypeScriptServer4/node_modules
 npm-debug.log
 yarn-error.log
 
